--- a/src/mac/sections/05-cmac-aes-capabilities.adoc
+++ b/src/mac/sections/05-cmac-aes-capabilities.adoc
@@ -15,7 +15,7 @@ Each CMAC-AES algorithm capability advertised is a self-contained JSON object us
 | JSON Value | Description | JSON type | Valid Values
 
 | direction | The MAC direction(s) to test | array | "gen" and/or "ver"
-| keyLen | The keyLen supported | integer | 128, 192, 256
+| keyLen | The keyLen supported | array of integer | [128, 192, 256]
 | msgLen | The CMAC message lengths supported in bits, values *MUST* be mod 8 | Domain | Min: 0, Max: 524288, Inc: 8
 | macLen | The supported mac sizes | Domain | Min: 32, Max: 128
 |===
@@ -46,8 +46,7 @@ The following is an example JSON object advertising support for CMAC-AES.
   "capabilities": [
     {
       "direction": ["gen", "ver"],
-      "keyLen": 128,
-      "keyingOption": 0,
+      "keyLen": [128],
       "msgLen": [
         {
           "min": 0,
@@ -65,8 +64,7 @@ The following is an example JSON object advertising support for CMAC-AES.
     },
     {
       "direction": ["gen", "ver"],
-      "keyLen": 192,
-      "keyingOption": 0,
+      "keyLen": [192],
       "msgLen": [
         {
           "min": 0,
@@ -84,8 +82,7 @@ The following is an example JSON object advertising support for CMAC-AES.
     },
     {
       "direction": ["gen", "ver"],
-      "keyLen": 256,
-      "keyingOption": 0,
+      "keyLen": [256],
       "msgLen": [
         {
           "min": 0,
