Adds performCounterTests to capabilities table and updates examples

--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -47,11 +47,14 @@ Each algorithm capability advertised is a self-contained JSON object and *SHALL*
 | keyingOption| The Keying Option used in TDES.  Keying option 1 (1) is 3 distinct keys (K1, K2, K3).  Keying Option 2 (2) is 2 distinct keys only suitable for decrypt (K1, K2, K1). | array of integers
 | overflowCounter| Indicates if the implementation can handle a counter exceeding the maximum value| boolean
 | incrementalCounter| Indicates if the implementation increments the counter (versus decrementing the counter)| boolean
+| performCounterTests| Indicates if the implementation can perform the Counter tests which check for an always increasing (or decreasing) counter value| boolean
 |===
 
 NOTE: The 'conformances' property is only valid for algorithms listed in <<conformances>>. The valid values in the array are also listed in that section. The array is always optional.
 
 NOTE: Some optional values are required depending on the algorithm. For example, AES-GCM requires ivLen, ivGen, ivGenMode, aadLen and tagLen. Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.
+
+NOTE: The 'performCounterTests' option is provided for counter implementations such as linear-feedback shift registers which may not present an always increasing or decreasing counter while still ensuring the IV is unique. This value defaults to true if not present. If it is set to false, the 'overflowCounter' and 'incrementalCounter' values will not be used.
 
 The following grid outlines which properties are *REQUIRED*, as well as all the possible values a server *MAY* support for each standard block cipher algorithm:
 
@@ -119,14 +122,14 @@ The following grid outlines which properties are *REQUIRED*, as well as the poss
 .Miscellaneous Block Cipher Algorithm Capabilities Applicability Grid
 
 |===
-| algorithm| revision| direction| keyLen| payloadLen| tweakMode| keyingOption| overflowCounter| incrementalCounter
+| algorithm| revision| direction| keyLen| payloadLen| tweakMode| keyingOption| overflowCounter| incrementalCounter| performCounterTests
 
-| AES-CBC-CS1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | |
-| AES-CBC-CS2| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | |
-| AES-CBC-CS3| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | |
-| AES-CTR| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 1, "Max": 128, "Inc": any}| | | true, false| true, false
-| AES-XTS| "1.0"| ["encrypt", "decrypt"]| [128, 256]| {"Min": 128, "Max": 65536, "Inc": 128}| ["hex", "number"]| | |
-| TDES-CTR| "1.0"| ["encrypt", "decrypt"]| | {"Min": 1, "Max": 64, "Inc": any}| | [1, 2] Note: 2 is only available for decrypt operations| true, false| true, false
+| AES-CBC-CS1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | |
+| AES-CBC-CS2| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | |
+| AES-CBC-CS3| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | |
+| AES-CTR| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 1, "Max": 128, "Inc": any}| | | true, false| true, false | true, false
+| AES-XTS| "1.0"| ["encrypt", "decrypt"]| [128, 256]| {"Min": 128, "Max": 65536, "Inc": 128}| ["hex", "number"]| | | |
+| TDES-CTR| "1.0"| ["encrypt", "decrypt"]| | {"Min": 1, "Max": 64, "Inc": any}| | [1, 2] Note: 2 is only available for decrypt operations| true, false| true, false| true, false
 |===
 
 NOTE: keyingOption 2 *SHALL* only available for decrypt operations.
