--- a/src/symmetric/sections/97-examples.adoc
+++ b/src/symmetric/sections/97-examples.adoc
@@ -6,22 +6,21 @@ The following is a example JSON object advertising support for all block ciphers
 
 [align=left,alt=,type=]
 [source, json]
-----POST
- [
+----
 [{
     "acvVersion": <acvp-version>
 },{
-        "algorithm": "ACVP-AES-GCM",
-        "revision": "1.0",
-        "prereqVals" :
-            [{
-                "algorithm" : "ACVP-AES-ECB",
-                "valValue" : "123456"
-            },
-            {
-                "algorithm" : "DRBG",
-                "valValue" : "123456"
-            }],
+    "algorithm": "ACVP-AES-GCM",
+    "revision": "1.0",
+    "prereqVals" :
+        [{
+            "algorithm" : "ACVP-AES-ECB",
+            "valValue" : "123456"
+        },
+        {
+            "algorithm" : "DRBG",
+            "valValue" : "123456"
+        }],
         "direction": [
             "encrypt",
             "decrypt"
@@ -140,9 +139,6 @@ The following is a example JSON object advertising support for all block ciphers
             128,
             192,
             256
-        ],
-        "payloadLen": [
-            256
         ]
     },
     {
@@ -222,9 +218,11 @@ The following is a example JSON object advertising support for all block ciphers
         ],
         "payloadLen": [
             128
-        ]
-        },
-        {
+        ],
+        "incrementalCounter": true,
+        "overflowCounter": false
+    },
+    {
         "algorithm": "ACVP-AES-CCM",
         "revision": "1.0",
         "prereqVals": [
@@ -501,7 +499,8 @@ The following is a example JSON object advertising support for all block ciphers
         ],
         "payloadLen": [
             64
-        ]
+        ],
+        "performCounterTests": false
     },
     {
         "algorithm": "ACVP-TDES-KW",
@@ -519,8 +518,7 @@ The following is a example JSON object advertising support for all block ciphers
             128
         ]
     }
- ]]
-
+ }]
 ----
 
 [appendix]
