Corrects prerequisites for KAS KDF specifications

--- a/src/kas/sp800-56cr1/hkdf/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56cr1/hkdf/sections/05-capabilities.adoc
@@ -30,7 +30,7 @@ Some algorithm implementations rely on other cryptographic primitives. For examp
 |===
 | JSON Value | Description | JSON Type | Valid Values
 
-| algorithm | a prerequisite algorithm | value | CMAC, DRBG, HMAC, KMAC, SHA
+| algorithm | a prerequisite algorithm | value | DRBG, HMAC, SHA
 | valValue | algorithm validation number | value | actual number or "same"
 | prereqAlgVal | prerequisite algorithm validation | object with algorithm and valValue properties| see above
 |===
