--- a/src/kas/sp800-56br2/ssc/sections/03-supported.adoc
+++ b/src/kas/sp800-56br2/ssc/sections/03-supported.adoc
@@ -1,6 +1,6 @@
 
 [#supported]
-== Supported KAS-IFC-SSC
+== Supported KAS-IFCs
 
 The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
 
