Fix columns in symmetric cipher table 6
Nine columns were declared, but ten headers are used. One more column is now declared.

--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -117,7 +117,7 @@ The following grid outlines which properties are *REQUIRED*, as well as the poss
 
 The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for each miscellaneous block cipher algorithm:
 
-[cols="<,<,<,<,<,<,<,<,<"]
+[cols="<,<,<,<,<,<,<,<,<,<"]
 [[property_grid_misc]]
 .Miscellaneous Block Cipher Algorithm Capabilities Applicability Grid
 
