Adds endpoint information for GET "/validations/{validationId}" - closes #720

--- a/src/protocol/sections/11-messaging.adoc
+++ b/src/protocol/sections/11-messaging.adoc
@@ -1233,6 +1233,42 @@ Response may vary from server depending on internal representation.
  -- Is this ok? Or do we want to standardize?
 ////
 
+[[validations]]
+=== Validations
+
+The Validations resources are informational only.
+
+[[validation_get]]
+==== Validation Information
+
+*GET /validations/{validationId}*
+
+Retrieve information about a specific validation.
+
+===== Response
+
+Response *MAY* vary from server depending on internal representation.  Available properties for validations *MAY* include (but are not limited to):
+
+* *url* - `string`, identifier for this resource
+* *validationId* - `string`, unique representation of the validation and source.
+* *moduleUrl* - `string`, the module URL associated with this validation. See <<modules>>
+* *oeUrls* - `array of string`, the Operational Environments associated with this validation. See <<oes>>
+
+[source,json]
+----
+[
+    {"acvVersion": "<acvp-version>"},
+    {
+        "url": "/acvp/v1/validations/50",
+        "validationId": "A12",
+        "moduleUrl": "/acvp/v1/modules/1",
+        "oeUrls": [
+            "/acvp/v1/oes/1"
+        ]
+    }
+]
+----
+
 [[testSessions]]
 === Test Sessions
 
