Adds multi refresh endpoint documentation - closes #869 - updates formatting on several json samples

--- a/src/protocol/sections/16-customspec.adoc
+++ b/src/protocol/sections/16-customspec.adoc
@@ -40,9 +40,8 @@ The Range object can be used to convey a range of values. It contains its own se
 A range object specifying a minimum of 0, a maximum of 8, with an increment of 1. This
 range object includes the values 1, 2, 3, 4, 5, 6, 7, and 8.
 
-[align=center,alt=,type=]
+[source,json]
 ....
-
 {"myRange": {
     "min": 1,
     "max": 8,
@@ -52,9 +51,8 @@ range object includes the values 1, 2, 3, 4, 5, 6, 7, and 8.
 
 A range object specifying a minimum of 0, a maximum of 8, with an increment of 2. This range object includes the values 0, 2, 4, 6, and 8.
 
-[align=center,alt=,type=]
+[source,json]
 ....
-
 {"myRange": {
     "min": 0,
     "max": 8,
@@ -70,9 +68,8 @@ The Domain object can be used to specify a set of values similar to Range, albei
 
 Several sample domain objects that state 0, 8, 16, 32, 96, 128, 192, and 256 are valid values.
 
-[align=center,alt=,type=]
+[source,json]
 ....
-
 {"myDomain": [
     {
         "min": 0,
@@ -89,10 +86,10 @@ Several sample domain objects that state 0, 8, 16, 32, 96, 128, 192, and 256 are
 ]}
 ....
 
-[align=center,alt=,type=]
+[source,json]
 ....
 
-{"myDomain": [ 0, 8, 16,  32, 96,  128, 192, 256 ]}
+{"myDomain": [ 0, 8, 16, 32, 96, 128, 192, 256 ]}
 ....
 
 ==== Additional Domain Information
