Multi JWT refresh should be "/login/refresh" not "/refresh"

--- a/src/protocol/sections/09-login.adoc
+++ b/src/protocol/sections/09-login.adoc
@@ -61,7 +61,7 @@ This endpoint can be utilized for refreshing multiple JWTs with a single POST.  
 
 ==== Request
 
-*POST /refresh*
+*POST /login/refresh*
 
 [source,json]
 ----
