--- a/src/protocol/sections/11-messaging.adoc
+++ b/src/protocol/sections/11-messaging.adoc
@@ -1607,6 +1607,8 @@ There may be cases where a particular vector set may not be cancelled and the en
 
 Request Validation Results for a Vector Set.
 
+When `showExpected` was set to true from a POST/PUT under <<vectorSet_results_post>>, additional information is provided back to the client for any failing test cases.  The additional information includes an "expected" as well as "provided" object that *MAY* be useful in diagnosing issues within the vector set validation.
+
 ===== Response
 
 The client will send this request to learn the validation results for an individual vector set. Properties are:
@@ -1626,7 +1628,9 @@ The client will send this request to learn the validation results for an individ
 *** `incomplete` - indicates the server has not processed the test case.
 *** `expired` - indicates the client did not send the test case response to the server prior to expiry.
 *** `passed` - indicates the test case passed.
-** *reason* - `number`, provides additional detail in case of a `failed` `result` value.
+** *reason* - `string`, provides additional detail in case of a `failed` `result` value.
+** *expected* - `object`, provides the value(s) the server expected for the test case.
+** *provided* - `object`, provides the value(s) the client provided for the test case.
 
 [source,json]
 ....
@@ -1674,6 +1678,7 @@ The client will send this request to submit the test results for an individual v
   {
     "vsId": 1437,
     "revision": "1.0.0",
+    "showExpected": true,
     "testGroups": [{
       "tgId": 1,
       "tests": [{
@@ -1691,8 +1696,9 @@ The client will send this request to submit the test results for an individual v
     ]
   }
 ]
-
 ....
+
+The `showExpected` property is optional; when included (and set to true) the ACVP server will include additional information within the validation response file described in <<vectorSet_results_get>>.
 
 ===== Response
 
