FixedInfoPattern construction clarification for "l" - closes #800, #955, #954

--- a/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
@@ -97,7 +97,7 @@ Note that AT LEAST one KDF Method is required for KAS schemes.  The following *M
 | JSON Value| Description| JSON Type| Valid Values| Optional
 
 | auxFunctions| The auxiliary functions to use with the KDF.| array of <<auxfunc>>| See <<auxfunc>>| No
-| fixedInfoPattern| The pattern used for fixedInfo construction. | string| See <<twostepkdf>>| No
+| fixedInfoPattern| The pattern used for fixedInfo construction. | string| See <<fixedinfopatcon>>| No
 | encoding| The encoding type to use with fixedInfo construction.  Note concatenation is currently supported.  ASN.1 should be coming. | array of string| concatenation| No
 |===
 
@@ -185,6 +185,10 @@ algorithmId.
 * label
 
   ** Random value chosen by ACVP server to represent the label.
+
+* l
+
+  ** The length of the derived keying material in bits, *MUST* be represented in 32 bits for ACVP testing.
 
 Example (Note that party U is the server in this case "434156536964", party V is the IUT "a1b2c3d4e5"):
 
