--- a/src/kas/sp800-56cr1/onestep/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56cr1/onestep/sections/05-capabilities.adoc
@@ -53,32 +53,29 @@ IUTs *SHALL* be capable of specifying how the FixedInfo is constructed for the K
 Pattern candidates:
 
 * literal[0123456789ABCDEF]
-
   ** uses the specified hex within "[]". literal[0123456789ABCDEF]
 substitutes "0123456789ABCDEF" in place of the field
 
 * uPartyInfo
-
   ** uPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
     *** "optional" items such as ephemeralKey *MUST* be included when available for ACVP testing.
 
 * vPartyInfo
-
   ** vPartyId { || ephemeralKey } { || ephemeralNonce } { || dkmNonce } { || c }
     *** "optional" items such as ephemeralKey *MUST* be included when available for ACVP testing.
 
 * context
-
   ** Random value chosen by ACVP server to represent the context.
 
 * algorithmId
-
   ** Random value chosen by ACVP server to represent the
 algorithmId.
 
 * label
-
   ** Random value chosen by ACVP server to represent the label.
+
+* l
+  ** The length of the derived keying material in bits, *MUST* be represented in 32 bits for ACVP testing.
 
 Example (Note that party U is the server in this case "434156536964", party V is the IUT "a1b2c3d4e5"):
 
