Updates SigPrim capabilities and prompt tables and examples

--- a/src/rsa/sections/05-sigprim-capabilities.adoc
+++ b/src/rsa/sections/05-sigprim-capabilities.adoc
@@ -1,7 +1,19 @@
 [[rsa_sigprim_capabilities]]
 === RSA SignaturePrimitive Mode Capabilities
 
-The RSA signaturePrimitive mode capabilities (otherwise known as RSASP1 in <<RFC3447>>) are advertised as JSON objects within the array of 'capabilities' as part of the 'capability_exchange' element of the ACVP JSON registration message. See the ACVP specification for details on the registration message. A single property is allowed in the registration. KeyFormat as described above. In this mode, the only tested capability is the correct exponentiation of 's = msg\^d mod n', where 'msg' is a message between '0' and 'n - 1', 'd' is the private exponent and 'n' is the modulus, all supplied by the testing ACVP server. In the event that 'keyFormat' is defined as 'crt', then 'd' is replaced with 'dmp1', 'dmq1', and 'iqmp'. Only 2048-bit RSA keys are allowed for this capability. There are no properties specified for this capability. See <<rsa_sigprim_tgjs> for additional details on constraints for 'msg' and 'n'. See the ACVP specification for details on the registration message.
+The RSA signaturePrimitive mode capabilities (otherwise known as RSASP1 in <<RFC3447>>) are advertised as JSON objects within the array of 'capabilities' as part of the 'capability_exchange' element of the ACVP JSON registration message. See the ACVP specification for details on the registration message. In this mode, the only tested capability is the correct exponentiation of 's = msg^d mod n', where 'msg' is a message between '0' and 'n - 1', 'd' is the private exponent and 'n' is the modulus, all supplied by the testing ACVP server. In the event that 'keyFormat' is defined as 'crt', then 'd' is replaced with 'dmp1', 'dmq1', and 'iqmp'. Only 2048-bit RSA keys are allowed for this capability. See <<rsa_sigprim_tgjs>> for additional details on constraints for 'msg' and 'n'. See the ACVP specification for details on the registration message.
+
+The following RSA / SignaturePrimitive / 1.0 capabilities *MAY* be advertised by the ACVP compliant crypto module:
+
+[[SigPrimRSAFIPS186-4]]
+.Supported RSA SignaturePrimitive 1.0 JSON Values
+|===
+| JSON value | Description | JSON type | Valid values
+
+| keyFormat | The format by which the client expects the private key to be communicated. Standard refers to the default p, q, d values. Chinese Remainder Theorem uses decomposed values for optimized decryption p, q, dmp1, dmq1, iqmp | string | "standard", "crt"
+| pubExpMode | Whether the IUT can handle a random or fixed public exponent | string | "random", "fixed"
+| fixedPubExp | The fixed public exponent e | hex | Any value supported by <<FIPS186-4>>: 65537 - 2^256-1, odd
+|===
 
 The following is an example of the registration
 
@@ -11,6 +23,8 @@ The following is an example of the registration
     "algorithm": "RSA",
     "mode": "signaturePrimitive",
     "revision": "1.0",
-    "keyFormat": "crt"
+    "keyFormat": "crt",
+    "pubExpMode": "fixed",
+    "fixedPubExp": "010001"
 }
 ----
