--- a/src/rsa/sections/06-sigprim-test-vectors.adoc
+++ b/src/rsa/sections/06-sigprim-test-vectors.adoc
@@ -24,11 +24,18 @@ Each test group contains an array of one or more test cases. Each test case is a
 
 | tcId | Test case idenfitier | integer
 | n | Modulus | hex
-| d | Private key exponent | hex
+| d | Private key exponent, when the keyFormat is "standard" | hex
+| dmp1 | d mod p - 1, when the keyFormat is "crt" | hex
+| dmq1 | d mod q - 1, when the keyFormat is "crt" | hex
+| iqmp | q\^-1 mod p, when the keyFormat is "crt" | hex
+| p | prime p, when the keyFormat is "crt" | hex
+| q | prime q, when the keyFormat is "crt" | hex
 | message | The message to sign | hex
 |===
 
 NOTE: Each test for which 'message' is not between '0' and 'n - 1' should fail.
+
+NOTE: Many private key properties are dependent on the 'keyFormat' property from the registration.
 
 Here is an abbreviated yet fully constructed example of the prompt
 
@@ -50,12 +57,14 @@ Here is an abbreviated yet fully constructed example of the prompt
                         "tcId" : 1194,
                         "n" : "d0c112f0bee36235d9f...",
                         "d" : "2cde66ea08797aad3cf...",
+                        "e": "010001",
                         "message" : "097e82fec7246..."
                     },
                     {
                         "tcId" : 1195,
                         "n" : "9cd5aa3f0c7c787ee38...",
                         "d" : "0c520729a48d1728ada...",
+                        "e" : "010001",
                         "message" : "ffd5aa3f0c7c7..."
                     }
                 ]
