Updates RSA spec to rename additional algorithm/mode/revisions to their respective FIPS document - #990

--- a/src/rsa/sections/03-supported.adoc
+++ b/src/rsa/sections/03-supported.adoc
@@ -9,9 +9,9 @@ The following algorithms *MAY* be advertised by the ACVP compliant cryptographic
 |===
 | Algorithm | Mode | Revision | Standard
 
-| "RSA" | "KeyGen" | "1.0" | <<FIPS186-4>>
+| "RSA" | "KeyGen" | "FIPS186-4" | <<FIPS186-4>>
 | "RSA" | "KeyGen" | "FIPS186-5" | <<FIPS186-5>>
-| "RSA" | "SigGen" | "1.0" | <<FIPS186-4>>
+| "RSA" | "SigGen" | "FIPS186-4" | <<FIPS186-4>>
 | "RSA" | "SigGen" | "FIPS186-5" | <<FIPS186-5>>
 | "RSA" | "SigVer" | "FIPS186-5" | <<FIPS186-5>>
 | "RSA" | "SigVer" | "FIPS186-4" | <<FIPS186-4>>
@@ -27,7 +27,7 @@ These will be refered to as algorithm / mode / revision throughout the document,
 
 The following RSA algorithms *MAY* claim conformance to <<SP800-106>>:
 
-* RSA / SigGen / 1.0
+* RSA / SigGen / FIPS186-4
 * RSA / SigGen / FIPS186-5
 * RSA / SigVer / FIPS186-2
 * RSA / SigVer / FIPS186-4
