--- a/src/rsa/sections/05-keygen-capabilities.adoc
+++ b/src/rsa/sections/05-keygen-capabilities.adoc
@@ -1,15 +1,15 @@
 [[rsa_keygen_capabilities]]
-=== Property Registration RSA KeyGen 1.0
+=== Property Registration RSA KeyGen FIPS186-4
 
-The RSA KeyGen v1.0 capabilities are advertised as JSON objects within the 'capabilities_exchange' property.
+The RSA KeyGen FIPS186-4 capabilities are advertised as JSON objects within the 'capabilities_exchange' property.
 
 [[mode_KeyGenFullSet]]
 ==== KeyGen Registration Table
 
-A registration for RSA / KeyGen / 1.0 *SHALL* use these properties
+A registration for RSA / KeyGen / FIPS186-4 *SHALL* use these properties
 
 [[KeyGen_table_fips186-4]]
-.RSA KeyGen 1.0 Capabilities JSON Values
+.RSA KeyGen FIPS186-4 Capabilities JSON Values
 |===
 | JSON Value | Description | JSON type | Valid Values
 
@@ -27,11 +27,11 @@ An example of this is the following
 {
     "algorithm": "RSA",
     "mode": "KeyGen",
-    "revision": "1.0",
+    "revision": "FIPS186-4",
     "prereqVals": [{"algorithm": "DRBG", "valValue": "1234"}, {"algorithm": "SHA", "valValue": "5678"}],
     "infoGeneratedByServer": false,
     "pubExpMode": "random",
-    "keyFormat": "crt"
+    "keyFormat": "crt",
     "capabilities": [
         {
             "randPQ": "B.3.2",
