--- a/src/rsa/sections/05-siggen-capabilities.adoc
+++ b/src/rsa/sections/05-siggen-capabilities.adoc
@@ -27,14 +27,14 @@ The following RSA / SigGen / 1.0 capabilities *MAY* be advertised by the ACVP co
 
 NOTE: The 'saltLen' property for each hash algorithm *SHALL* only be present of the 'sigType' is "pss". The values allowed in PSS signature generation is between 0 and the length of the corresponding hash function output block (in bytes), the end points included.
 
-The following is an example of a registration for RSA / SigGen / 1.0
+The following is an example of a registration for RSA / SigGen / FIPS186-4
 
 [source, json]
 ----
 {
     "algorithm": "RSA",
     "mode": "sigGen",
-    "revision": "1.0",
+    "revision": "FIPS186-4",
     "prereqVals": [{"algorithm": "DRBG", "valValue": "same"}, {"algorithm": "SHA", "valValue": "same"}],
     "conformances": [
         "SP800-106"
