--- a/src/rsa/sections/06-decprim-test-vectors.adoc
+++ b/src/rsa/sections/06-decprim-test-vectors.adoc
@@ -33,9 +33,10 @@ NOTE: A failing ciphertext is one such that the ciphertext is greater than the n
 
 Here is an abbreviated yet fully constructed example of the prompt
 
+[source, json]
 ----
 [
-    { "acvVersion": <acvp-version> },
+    { "acvVersion": "{acvp-version}" },
     {
         "vsId": 1194,
         "algorithm": "RSA",
