--- a/src/rsa/sections/06-keygen-test-vectors.adoc
+++ b/src/rsa/sections/06-keygen-test-vectors.adoc
@@ -29,7 +29,7 @@ In the case of 'infoGeneratedByServer' being set to false during the registratio
 
 Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each RSA / KeyGen / * test vector.
 
-The difference between revision "1.0" and "FIPS186-5" within the prompts lies in the strings used by the server to refer to the various "randPQ", and "primeTest" modes. Revision "1.0" utilizes the section number from <<FIPS186-4>> to refer to the algorithm used while revision "FIPS186-5" utilizes a description of the algorithm.
+The difference between revision "FIPS186-4" and "FIPS186-5" within the prompts lies in the strings used by the server to refer to the various "randPQ", and "primeTest" modes. Revision "FIPS186-4" utilizes the section number from <<FIPS186-4>> to refer to the algorithm used while revision "FIPS186-5" utilizes a description of the algorithm.
 
 .RSA KeyGen Test Case JSON Object
 |===
