--- a/src/rsa/sections/06-siggen-test-vectors.adoc
+++ b/src/rsa/sections/06-siggen-test-vectors.adoc
@@ -41,19 +41,19 @@ Each test group contains an array of one or more test cases. Each test case is a
 
 NOTE: The 'saltLen' property will only be present in test groups for the 'sigType' "pss".
 
-Here is an abbreviated yet fully constructed example of the prompt for RSA / SigGen / 1.0. The only difference in the structure between RSA / SigGen / 1.0 and RSA / SigGen / FIPS186-5 is the inclusion of the 'maskFunction' property in the 'testGroup' for RSA / SigGen / FIPS186-5.
+Here is an abbreviated yet fully constructed example of the prompt for RSA / SigGen / FIPS186-4. The only difference in the structure between RSA / SigGen / FIPS186-4 and RSA / SigGen / FIPS186-5 is the inclusion of the 'maskFunction' property in the 'testGroup' for RSA / SigGen / FIPS186-5.
 
 [source, json]
 ----
 [
   {
-    "acvVersion": " <acvp-version>"
+    "acvVersion": " {acvp-version}"
   },
   {
     "vsId": 1163,
     "algorithm": "RSA",
     "mode": "sigGen",
-    "revision": "1.0",
+    "revision": "FIPS186-4",
     "testGroups": [
       {
         "tgId": 1,
