--- a/src/rsa/sections/06-sigprim-test-vectors.adoc
+++ b/src/rsa/sections/06-sigprim-test-vectors.adoc
@@ -35,7 +35,7 @@ Here is an abbreviated yet fully constructed example of the prompt
 [source, json]
 ----
 [
-    { "acvVersion": <acvp-version> },
+    { "acvVersion": "{acvp-version}" },
     {
         "vsId": 1193,
         "algorithm": "RSA",
