--- a/src/rsa/sections/06-sigver-test-vectors.adoc
+++ b/src/rsa/sections/06-sigver-test-vectors.adoc
@@ -41,19 +41,19 @@ Each test group contains an array of one or more test cases. Each test case is a
 | randomValueLen | The random value's bit length | integer
 |===
 
-Here is an abbreviated yet fully constructed example of the prompt for RSA / SigVer / 1.0. The only difference in the structure between RSA / SigVer / 1.0 and RSA / SigVer / FIPS186-5 is the inclusion of the 'maskFunction' property in the 'testGroup' for RSA / SigVer / FIPS186-5.
+Here is an abbreviated yet fully constructed example of the prompt for RSA / SigVer / FIPS186-4. The only difference in the structure between RSA / SigVer / FIPS186-4 and RSA / SigVer / FIPS186-5 is the inclusion of the 'maskFunction' property in the 'testGroup' for RSA / SigVer / FIPS186-5.
 
 [source, json]
 ----
 [
   {
-    "acvVersion": "<acvp-version>"
+    "acvVersion": "{acvp-version}"
   },
   {
     "vsId": 1173,
     "algorithm": "RSA",
     "mode": "sigVer",
-    "revision": "1.0",
+    "revision": "FIPS186-4",
     "testGroups": [
       {
         "tgId": 1,
