--- a/src/rsa/sections/06-test-vectors.adoc
+++ b/src/rsa/sections/06-test-vectors.adoc
@@ -2,7 +2,7 @@
 [[tgjs]]
 == Test Vectors
 
-The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation. A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client. Each test vector set represents an individual crypto algorithm, such as RSA / SigGen / 1.0, RSA / KeyVer / FIPS186-5, etc. This section describes the JSON schema for a test vector set used with RSA crypto algorithms.
+The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation. A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client. Each test vector set represents an individual crypto algorithm, such as RSA / SigGen / FIPS186-4, RSA / KeyVer / FIPS186-5, etc. This section describes the JSON schema for a test vector set used with RSA crypto algorithms.
 
 The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client. The following table describes the JSON elements at the top level of the hierarchy.
 
