--- a/src/rsa/sections/07-keygen-responses.adoc
+++ b/src/rsa/sections/07-keygen-responses.adoc
@@ -38,7 +38,7 @@ NOTE: If the 'infoGeneratedByServer' test group property is true, then the only 
 
 NOTE: The 'e' property *SHALL* only be included when the 'infoGeneratedByServer' is false and the 'pubExpMode' is "random".
 
-Use the following applicability grid to determine which properties should be present based on the 'randPQ' test group property. The 'randPQ' property values for RSA / KeyGen / 1.0 are based on the section numbers in Appendix B in <<FIPS186-4>>. For RSA / KeyGen / FIPS186-5, the property values are based on the true names of the generation methods. The RSA / KeyGen / FIPS186-5 names will be listed in the grid. This grid only applies to 'AFT' test types.
+Use the following applicability grid to determine which properties should be present based on the 'randPQ' test group property. The 'randPQ' property values for RSA / KeyGen / FIPS186-4 are based on the section numbers in Appendix B in <<FIPS186-4>>. For RSA / KeyGen / FIPS186-5, the property values are based on the true names of the generation methods. The RSA / KeyGen / FIPS186-5 names will be listed in the grid. This grid only applies to 'AFT' test types.
 
 .RSA Test Case Applicability Grid For AFT Responses
 |===
@@ -74,7 +74,7 @@ The following is an example of an RSA / KeyGen / * response. Test group 1 uses t
     "vsId": 1133,
     "algorithm": "RSA",
     "mode": "keyGen",
-    "revision": "1.0",
+    "revision": "FIPS186-4",
     "testGroups": [
       {
         "tgId": 1,
