--- a/src/rsa/sections/07-siggen-responses.adoc
+++ b/src/rsa/sections/07-siggen-responses.adoc
@@ -34,7 +34,7 @@ The following is an example of the response for RSA / SigGen / *
   "vsId": 0,
   "algorithm": "RSA",
   "mode": "SigGen",
-  "revision": "1.0",
+  "revision": "FIPS186-4",
   "isSample": true,
   "testGroups": [
     {
