--- a/src/rsa/sections/07-sigver-responses.adoc
+++ b/src/rsa/sections/07-sigver-responses.adoc
@@ -22,7 +22,7 @@ The following is an example of the response for RSA / SigVer / *
   "vsId": 0,
   "algorithm": "RSA",
   "mode": "SigVer",
-  "revision": "1.0",
+  "revision": "FIPS186-4",
   "isSample": true,
   "testGroups": [
     {
