--- a/src/conditioning-components/sections/06-hash-df-test-vectors.adoc
+++ b/src/conditioning-components/sections/06-hash-df-test-vectors.adoc
@@ -27,8 +27,8 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON Type
 
 | tcId | Test case identifier | integer
-| input | The input into the derivation function | hex
-| inputLen | The length in bits of the input | integer
+| payload | The input into the derivation function | hex
+| payloadLen | The length in bits of the input | integer
 |===
 
 Here is an abbreviated yet fully constructed example of the prompt for ConditioningComponent / Hash_DF / SP800-90B
@@ -48,13 +48,13 @@ Here is an abbreviated yet fully constructed example of the prompt for Condition
       "tests": [
         {
           "tcId": 1,
-          "inputString": "2874215320DADAC...",
-          "inputLen": 54112
+          "payload": "2874215320DADAC...",
+          "payloadLen": 54112
         },
         {
           "tcId": 2,
-          "inputString": "36",
-          "inputLen": 8
+          "payload": "36",
+          "payloadLen": 8
         }
       ]
     }
